frontend/test/should_pass/set_model_002.gm
node class A
{
	intValue: int;
	stringValue: string;
	intSet: set<int>;
	stringSet: set<string>;
}