frontend/test/should_fail/mapset_model.gm
node class A
{
	intVal:int;
	strVal:string;
	intToStr:map<int, string>;
	strToInt:map<string, int>;
	intSet:set<int>;
	strSet:set<string>;
}
